# totp-pwa-app

./: .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: build-and-deploy.yml
src/: constants.ts  main.ts  timer-worker.ts  types.ts
src/assets/css/: index.css
src/components/: AccountAddDialog.sfce.vue  AccountCard.sfce.vue  AccountCode.sfce.vue  AccountItem.sfce.vue  AccountList.sfce.vue  AppTheme.sfce.vue  AppToaster.sfce.vue  CountdownTimer.sfce.vue  MenuButton.sfce.vue
src/utils/: compress.ts  escape.ts  otpauth.ts  seconds.ts
test/utils/: escape.test.ts  otpauth.test.ts  seconds.test.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
