[package]
name = "totp-wasm"
description = "TOTP WASM"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/sotnikovse/totp-pwa-app/tree/main/wasm"
publish = false
authors = ["Stepan Sotnikov <sotnikovse1207@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
